добавлено расписание изменен файл свагера
